--- a/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
+++ b/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
@@ -5,17 +5,17 @@
     </div>
     <div class="col-sm-8">
       <div *ngIf="editForm.dirty" class="alert alert-info">
-        <strong>Information:</strong> You have made changes. All unsaved changes will be lost!
+        <strong>Information:</strong> You have made changes. All unsaved changes
+        will be lost!
       </div>
     </div>
-    
   </div>
   <div class="row">
     <div class="col-sm-4">
       <div class="card">
         <img
           class="card-img-top img-thumbnail"
-          src="{{ user?.photoUrl }}"
+          src="{{ photoUrl }}"
           alt="{{ user?.knownAs }}"
         />
         <div class="card-body">
@@ -37,7 +37,13 @@
           </div>
         </div>
         <div class="card-footer">
-          <button [disabled]="!editForm.dirty" form="editForm" class="btn btn-success btn-block">Save Changes</button>
+          <button
+            [disabled]="!editForm.dirty"
+            form="editForm"
+            class="btn btn-success btn-block"
+          >
+            Save Changes
+          </button>
         </div>
       </div>
     </div>
@@ -45,7 +51,7 @@
       <div class="tab-panel">
         <tabset class="member-tabset">
           <tab heading="Edit Profile">
-            <form #editForm='ngForm' id="editForm" (ngSubmit)="updateUser()">
+            <form #editForm="ngForm" id="editForm" (ngSubmit)="updateUser()">
               <h4>Description</h4>
               <textarea
                 name="introduction"
@@ -87,7 +93,10 @@
             </form>
           </tab>
           <tab heading="Edit Photos">
-            <p>edit photos soon</p>
+            <app-photo-editor
+              [photos]="user.photos"
+              (getMemberPhotoChange)="updateMainPhoto($event)"
+            ></app-photo-editor>
           </tab>
         </tabset>
       </div>
